--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
 </head>
 
 <body>
+    <section class="">
+        <div class="container px-10">
+            <ul class="flex border-b">
+                <li class="-mb-px mr-1">
+                    <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold"
+                        href="#">Home</a>
+                </li>
+                <li class="mr-1">
+                    <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold"
+                        href="#">Man Jacket </a>
+                </li>
+                <li class="mr-1">
+                    <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold"
+                        href="#">Woman Jacket</a>
+                </li>
+                <li class="mr-1">
+                    <a class="bg-white inline-block py-2 px-4 text-gray-400 font-semibold" href="#">Contark Us</a>
+                </li>
+            </ul>
+        </div>
+    </section>
     <header class="bg-yellow-50 p-6">
         <section class="container lg:flex items-center   justify-around py-12 px-4">
             <div class=" space-y-6  ">
@@ -184,7 +205,8 @@
                     <img class="p-8" src="images/shopping.png" alt="">
                 </div>
                 <div class="bg-red-200 p-5  rounded ">
-                    <svg class=" inline w-16 h-16" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <svg class=" inline w-16 h-16" fill="currentColor" viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z">
                         </path>
@@ -206,7 +228,7 @@
 
 
 
-            <h1>fd;lgjkfdpjvklgjefp'</h1>
+
 
     </main>
     <footer>
